# ai_portfolio_analyzer

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
ai_portfolio_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
portfolio_analyzer/app/: main.py
portfolio_analyzer/app/components/: charts.py  kpis.py  report.py  sidebar.py  social.py
portfolio_analyzer/app/pages/: portfolio_builder.py
portfolio_analyzer/core/: ai_analysis.py  data.py  engine.py  metrics.py  optimization.py  report_builder.py
