[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-portfolio-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.2",
    "openai>=2.24.0",
    "pandas>=2.3.3",
    "playwright>=1.58.0",
    "plotly>=6.5.2",
    "reportlab>=4.4.10",
    "requests>=2.32.5",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "streamlit>=1.54.0",
    "yfinance>=1.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
